<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.State1.FirstState">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struct1_text1"/>
                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/struct_exempl1"/>
                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struct1_text2"/>
                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struct2_text2"/>
                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/struct_exempl2"/>
                <LinearLayout
                    android:layout_marginVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/struct_title1"
                        android:textSize="20sp"/>
                </LinearLayout>
                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struct2_text3"/>
                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/struct_exempl3"/>
                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struct1_text4"/>
                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/struct_exempl4"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>